source/css/style.styl
/* Developer: Øyvind Nordbø // @onordbo // oyvind.co */

body
  background-image url(/img/bg.png)
  background-repeat no-repeat
  background-position center center
  background-attachment fixed
  background-color #009DE0
  -webkit-font-smoothing antialiased
  -moz-osx-font-smoothing grayscale

h1
  font-size 60px
  color #ffffff

p
  color #ffffff

a
  color #ffffff

a:hover
  text-decoration none

a:visited
  text-decoration none
  color #ffffff

::selection
  background-color rgba(0, 0, 0, 0.3)
  color #ffffff

footer
  margin-top 100px

#logo
  margin-top 60px
  margin-bottom 60px
  max-width 500px

.about
  position fixed
  left 0px
  bottom 0px
  margin 0px 0px 10px 30px
  p
    font-weight bold
    font-size 16px

.about-modal
   p
    color black

.modal-content
   padding 20px 20px 0px 20px

.modal-footer
  a
    color black

.btn
  padding 20px 20px 10px 20px
  border 3px solid #ffffff
  margin-bottom 30px
  p
    font-family Helvetica Neue, Helvetica, Arial
    font-size 18px
    color #ffffff
  &:hover
    p
      color #000000
    background-color white
    transition background-color 0.4s


.share
  margin-bottom 15px
  margin-right 10px
  position fixed
  right 0px
  bottom 0px
  img
    display inline
    margin 0 6px
    width 35px

@media only screen and (max-device-width: 480px)

  p
    font-size 14px
    color #ffffff

  #logo
    width 250px
    margin-top 30px
    margin-bottom 20px

  .btn
    padding 15px 15px 5px 15px
    border 1px solid #ffffff
    margin-bottom 5px
    p
      font-family Helvetica Neue, Helvetica, Arial
      font-size 13px
      color #ffffff
    &:hover
      color white
      background-color rgba(0, 0, 0, 0)

  #social
    margin-top 10px

  h1
    font-size 30px
    color #ffffff

  .share
  margin-bottom 10px
  margin-right 10px
  position fixed
  right 0
  bottom 0
  img
    display inline
    margin 0 3px
    width 20px

